# continuous-integration

./: .gitignore  Cargo.toml  README.md  concourse.yml  juice-containers.yml  juice.yml
container/: Dockerfile  cargo-override-injection.sh  escalate.sh
container/fedora/: Containerfile  Dockerfile  pkg.sh.native  pkg.sh.opencl
container/fedora/cuda/: Dockerfile  pkg.sh  prepare.sh
container/fedora/default/: Containerfile  Dockerfile  escalate.sh  pkg.sh  prepare.sh
container/fedora/native/: Containerfile  Dockerfile  pkg.sh  prepare.sh
container/fedora/opencl/: Containerfile  Dockerfile  pkg.sh  prepare.sh
container/misc/: Containerfile  Dockerfile  pkg.sh  tooling.sh
container/pureos/: Dockerfile  pkg.sh.native  pkg.sh.opencl
container/pureos/cuda/: Dockerfile
container/pureos/default/: Dockerfile
container/pureos/native/: Dockerfile
container/pureos/opencl/: Dockerfile
container/ubuntu/: Dockerfile  pkg.sh.cuda  pkg.sh.opencl
container/ubuntu/cuda/: Dockerfile  pkg.sh
container/ubuntu/default/: Dockerfile  (+2 more)
src/: main.rs  types.rs
templates/: cargo-build.yml  cargo-config.yml  cargo-run.yml  cargo.yml  concourse.yml  container-resources-preload.yml  container-resources.yml  container-resourses.yml  container-tags.yml  container-tags2.yml  doc-resources.yml  doc.yml  juice-containers.yml  juice-crashtest.yml  juice.yml  master-examples.yml  master-resources.yml  master.yml  parallelism.yml  pr-examples.yml  pr-resources.yml  pr.yml  tags.yml  tags2.yml  tags6.yml  tags8.yml  tagsA.yml  tagsC.yml  tagsE.yml  tagsnimage.yml  tagsnimage2.yml
(+5 files in other folders)
