[package]
name = "concourse-matrix"
version = "0.1.0"
authors = ["Bernhard Schuster <bernhard@ahoi.io>"]
build = "build.rs"

[dependencies]
askama = { git = "https://github.com/djc/askama.git" }
regex = "0.2"
lazy_static = "0.2"
error-chain = "0.11"

[build-dependencies]
askama = { git = "https://github.com/djc/askama.git" }
